<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dummy"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:maxWidth="250dp"
        android:text="@string/banner1"
        android:textAlignment="center"
        android:textColor="@color/blue1"
        android:textSize="40sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:minWidth="350dp"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:id="@+id/layout1"
        android:layout_above="@id/dummy"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle"
        android:layout_marginBottom="-260dp"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:id="@+id/btn_signup"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/signup_text"
            android:textSize="30sp"
            android:textColor="@color/blue1"
            android:backgroundTint="@color/white"
            app:cornerRadius="5dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/blue1"
            android:onClick="gotoSignUp"
            />

        <Button
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/login_text"
            android:textSize="30sp"
            android:textColor="@color/blue1"
            android:backgroundTint="@color/white"
            app:cornerRadius="5dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/blue1"
            android:onClick="gotoLogin" />

        <Button
            android:layout_width="wrap_content"
            android:minWidth="200dp"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/about_us_text"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue1"
            app:cornerRadius="5dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/blue1"
            android:onClick="gotoAboutUs" />

    </LinearLayout>
</RelativeLayout>