<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dummy"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="wrap_content"
        android:minWidth="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/layout2"
        android:layout_above="@id/layout2"
        android:background="@drawable/roundedbox"
        android:text="@string/signup_text"
        android:textSize="35sp"
        android:textColor="@color/cream1"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="-20dp"
        android:translationZ="100dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:minWidth="350dp"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:id="@+id/layout2"
        android:background="@drawable/rectangle"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/dummy"
        android:orientation="vertical"
        android:layout_marginBottom="-250dp">
    
        <EditText
            android:layout_width="wrap_content"
            android:minWidth="300dp"
            android:maxWidth="300dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:maxHeight="60dp"
            android:id="@+id/Name"
            android:layout_gravity="center"
            android:background="@drawable/edittext"
            android:hint="@string/s1"
            android:textColorHint="@color/blue1"
            android:textSize="30sp"
            android:textColor="@color/blue1"
            android:inputType="text"
            android:autofillHints="name"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="40dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:minWidth="300dp"
            android:maxWidth="300dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:maxHeight="60dp"
            android:id="@+id/Username"
            android:layout_gravity="center"
            android:background="@drawable/edittext"
            android:hint="@string/s2"
            android:textColorHint="@color/blue1"
            android:textSize="30sp"
            android:textColor="@color/blue1"
            android:inputType="text"
            android:autofillHints="username"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:minWidth="300dp"
            android:maxWidth="300dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:maxHeight="60dp"
            android:id="@+id/Email"
            android:layout_gravity="center"
            android:background="@drawable/edittext"
            android:hint="@string/s3"
            android:textColorHint="@color/blue1"
            android:textSize="30sp"
            android:textColor="@color/blue1"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:minWidth="300dp"
            android:maxWidth="300dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:maxHeight="60dp"
            android:id="@+id/Pass"
            android:layout_gravity="center"
            android:background="@drawable/edittext"
            android:hint="@string/s4"
            android:textColorHint="@color/blue1"
            android:textSize="30sp"
            android:textColor="@color/blue1"
            android:inputType="text"
            android:autofillHints="password"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:minWidth="300dp"
            android:maxWidth="300dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:maxHeight="60dp"
            android:id="@+id/C_Pass"
            android:layout_gravity="center"
            android:background="@drawable/edittext"
            android:hint="@string/s5"
            android:textColorHint="@color/blue1"
            android:textSize="30sp"
            android:textColor="@color/blue1"
            android:inputType="text"
            android:autofillHints="password"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:backgroundTint="@color/blue1"
        android:minWidth="300dp"
        android:minHeight="60dp"
        android:text="@string/signup_text"
        android:textColor="@color/cream1"
        android:textSize="33sp"
        app:cornerRadius="10dp"
        app:strokeColor="@color/cream1"
        app:strokeWidth="2dp"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:onClick="executeSignUp" />

</RelativeLayout>